--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -11,6 +11,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
-    <script src="/src/assets/js/katex.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js"></script>
   </body>
 </html>
