--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" />
 
-    <title>Blog</title>
+    <title>RainBlog</title>
   </head>
   <body>
     <div id="app"></div>
